// Copyright (C) 2021-2024 Lightbend Inc. <https://www.lightbend.com>

//
// == Kalix TCK model test for value-based entities ==
// see tck/src/main/scala/kalix/tck/EntityTCK.scala

syntax = "proto3";

package kalix.tck.model.valueentity;

option java_package = "kalix.tck.model.valueentity";
option java_multiple_files = true;

import "kalix/annotations.proto";
import "google/api/annotations.proto";

import "kalix/tck/model/valueentity/value_entity_api.proto";


//
// The `ValueBasedTwo` service is only for verifying forward actions and side effects.
//
// - The entity persistence-id must be `value-entity-tck-model-two`.
// - The `Call` method is not required to do anything, and must return an empty `Response` message.
//
service ValueEntityTwo {
  option (kalix.codegen) = {
    value_entity: {
      name: "ValueEntityTwoEntity"
      type_id: "value-entity-tck-model-two"
      state: "Persisted"
    }
  };
  rpc Call(Request) returns (Response);
}
